[gd_scene load_steps=7 format=3 uid="uid://q6xsd8gh5tiq"]

[ext_resource type="LabelSettings" uid="uid://rltvy27kxyxb" path="res://scenes/start_screen/project_box/title_label_settings.tres" id="1_n2p5s"]
[ext_resource type="Script" path="res://scenes/start_screen/project_box/project_box.gd" id="1_rg0qk"]
[ext_resource type="LabelSettings" uid="uid://bngi0x712m4pa" path="res://scenes/start_screen/project_box/date_label_settings.tres" id="2_bto0r"]
[ext_resource type="LabelSettings" uid="uid://dn5deftnqfwbr" path="res://scenes/start_screen/project_box/path_label_settings.tres" id="3_twj7a"]
[ext_resource type="Texture2D" uid="uid://3svb07jeroqt" path="res://assets/icons/default/close.png" id="5_31lop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhadu"]
content_margin_left = 7.0
content_margin_top = 3.0
content_margin_right = 7.0
content_margin_bottom = 3.0
bg_color = Color(0.34902, 0.34902, 0.34902, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="ProjectBox" type="PanelContainer" node_paths=PackedStringArray("title_label", "last_edited_date_label", "path_label")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fhadu")
script = ExtResource("1_rg0qk")
title_label = NodePath("VBox/TopHBox/TitleLabel")
last_edited_date_label = NodePath("VBox/TopHBox/LastEditedLabel")
path_label = NodePath("VBox/BottomHBox/PathLabel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox/TopHBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "TITLE"
label_settings = ExtResource("1_n2p5s")

[node name="LastEditedLabel" type="Label" parent="VBox/TopHBox"]
layout_mode = 2
mouse_filter = 1
text = "0000-00-00  00:00  Last edited"
label_settings = ExtResource("2_bto0r")

[node name="BottomHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="VBox/BottomHBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Path: ..."
label_settings = ExtResource("3_twj7a")

[node name="RemoveProjectButton" type="TextureButton" parent="VBox/BottomHBox"]
modulate = Color(1, 1, 1, 0.403922)
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
tooltip_text = "Delete project from list."
texture_normal = ExtResource("5_31lop")
ignore_texture_size = true
stretch_mode = 6

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="VBox/BottomHBox/RemoveProjectButton" to="." method="_on_remove_project_button_pressed"]
